# openchronos-ng-elf

./: .editorconfig  .gitignore  CMakeLists.txt  Common.mk  Doxyfile  LICENSE-TI  Makefile  README  README.md  Rules.mk  TODO  boot.c  circle.yml  config.h  config.h.circle  ezchronos.c  ezchronos.h  makefile  menu.c  menu.h  messagebus.c  messagebus.h  modinit.c  modinit.c.circle  modinit.h  openchronos.c  openchronos.dep.bak  openchronos.elf  openchronos.h  openchronos.txt  testsalt.txt  todo.txt  upload_firmware.sh
circleci/: setup.sh
contrib/: ChronosTool.py  checkpatch.pl  chronos_mouse.py  otptest.py  plot_accel.py  pre-commit  read_acceleration.py  rtttl2bin.py  rtttl2bin_test.py
doc/: Extending.txt
driver/: adc12.c  adc12.h  buzzer.c  buzzer.h  display.c  display.h  display1.c  dsp.c  dsp.h  infomem.c  infomem.h  pmm.c  pmm.h  ports.c  ports.h  radio.c  rf1a.c  rtca.c  rtca.h  timer.c  timer.h  vti_as.c  vti_as.h  vti_ps.c  vti_ps.h
drivers/: Makefile  adc12.c  adc12.h  as.c  as.h  battery.c  battery.h  bmp_as.c  bmp_as.h  bmp_ps.c  bmp_ps.h  buzzer.c  buzzer.h  display.c  display.h  display1.c  dsp.c  dsp.h  infomem.c  infomem.h  lpm.c  lpm.h  messagebus.c  messagebus.h  pmm.c  pmm.h  ports.c  ports.h  ps.c  ps.h  radio.c  radio.h  rf1a.c  rf1a.h  rtc_dst.c  rtc_dst.h  rtca.c  rtca.h  rtca_now.h  temperature.c  (+10 more)
gcc/: intrinsics.c  intrinsics.h
include/: project.h
logic/: MYsimpliciti.c  acceleration.c  acceleration.h  alarm.c  alarm.h  altitude.c  altitude.h  battery.c  battery.h  bluerobin.c  bluerobin.h  clock.c  clock.h  date.c  date.h  dst.c  dst.h  eggtimer.c  eggtimer.h  gps.c  gps.h  menu.c  menu.h  phase_clock.c  phase_clock.h  prout.c  prout.h  rfbsl.c  rfbsl.h  rfsimpliciti.c  rfsimpliciti.h  sequence.c  sequence.h  sidereal.c  sidereal.h  stopwatch.c  stopwatch.h  strength.c  strength.h  temperature.c  (+7 more)
modules/: accelerometer.c  accelerometer.cfg  accelerometer_b.c  accelerometer_b.cfg  accelerometer_w.c  accelerometer_w.cfg  alarm.c  alarm.cfg  altimeter.c  altimeter.cfg  battery.c  battery.cfg  batterymon.c  batterymon.cfg  batterypct.c  batterypct.cfg  boil.c  boil.cfg  buzztest.c  buzztest.cfg  clock.c  clock.cfg  clock.h  crickets.c  crickets.cfg  date.c  date.cfg  date.h  flyback.c  flyback.cfg  hashutils.c  hashutils.h  hello.c  hello.cfg  lapcounter.c  lapcounter.cfg  music.c  music.cfg  otp.c  otp.cfg  (+20 more)
simpliciti/: Makefile
simpliciti/Applications/application/End_Device/: Makefile  main_ED_BM.c
simpliciti/Components/bsp/: Makefile
simpliciti/Components/bsp/boards/CC430EM/: bsp_board.c  bsp_board_defs.h
simpliciti/Components/bsp/mcus/: bsp_msp430_defs.h
simpliciti/Components/mrfi/: Makefile
simpliciti/Components/mrfi/radios/family5/: mrfi_radio_interface.c
simpliciti/Components/nwk/: nwk_QMgmt.c  nwk_frame.c  nwk_globals.c
simpliciti/Components/nwk_applications/: nwk_ioctl.c  nwk_link.c  nwk_ping.c
toolchains/: toolchain-msp430-gcc-ti.cmake
toolchains/Platform/: msp430-gcc.cmake
tools/: config.py  field_encodings.py  make_modinit.py  modules.py  update_rtca_now.sh
